--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "astro": "astro"
   },
   "dependencies": {
+    "@astrojs/tailwind": "^5.1.4",
     "astro": "^5.1.4",
     "autoprefixer": "^10.4.20",
     "postcss": "^8.4.49",
