--- a/package.json
+++ b/package.json
@@ -10,9 +10,10 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "^5.1.4",
+    "@shikijs/core": "^2.1.0",
     "astro": "^5.1.4",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.49",
+    "postcss": "^8.5.1",
     "somipacking": "file:",
     "tailwindcss": "^3.4.17"
   }
